...
					android:layout_below="@id/kanjiContainer"
					android:layout_centerHorizontal="true"
					android:layout_marginTop="@dimen/item_margin_tiny"
					android:background="@drawable/bg_broad">

					<ImageButton
						android:id="@+id/btnVoice"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_centerInParent="true"
						android:layout_marginStart="@dimen/item_margin_small"
						android:background="@android:color/transparent"
						android:src="@drawable/ic_microphone" />
...
				android:id="@+id/frameRecording"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/item_margin_small">

				<ImageButton
					android:id="@+id/btnRecording"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					android:background="@android:color/transparent"
					android:src="@drawable/ic_mic" />

...
