<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@android:color/transparent"
	android:gravity="center"
	android:orientation="vertical"
	android:padding="@dimen/item_padding_normal">

	<TextView
		android:id="@+id/stage_cleared"
		style="@style/Word"
		android:layout_width="wrap_content"
		android:gravity="center"
		android:text="@string/game_over"
		android:textColor="@color/ic_cancel" />

	<LinearLayout
		android:id="@+id/resultContainer"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/item_margin_small"
		android:background="@color/text_light_4"
		android:gravity="center_horizontal"
		android:orientation="vertical"
		android:padding="@dimen/item_padding_small">

		<TextView
			android:id="@+id/remark"
			style="@style/SubheadingMedium"
			android:layout_width="wrap_content"
			android:gravity="center_horizontal"
			android:text="@string/lose_result_title"
			android:textAllCaps="true" />
	</LinearLayout>

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/item_margin_small"
		android:orientation="horizontal">

		<ImageButton
			android:id="@+id/btnContinue"
			android:layout_width="@dimen/avatar_small"
			android:layout_height="@dimen/avatar_small"
			android:background="@drawable/ic_play" />

		<ImageButton
			android:id="@+id/btnReplay"
			android:layout_width="@dimen/avatar_small"
			android:layout_height="@dimen/avatar_small"
			android:layout_marginStart="@dimen/item_margin_normal"
			android:layout_marginLeft="@dimen/item_margin_normal"
			android:background="@drawable/ic_replay" />
	</LinearLayout>
</LinearLayout>