...
		android:layout_below="@id/achievementRemark"
		android:orientation="horizontal"
		android:paddingLeft="@dimen/item_padding_normal"
		android:paddingRight="@dimen/item_padding_normal" />

	<android.support.v7.widget.RecyclerView
		android:id="@+id/stageList"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/badgesList"
		android:layout_marginTop="@dimen/item_margin_tiny"
		android:orientation="vertical" />
</RelativeLayout>
