<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/bg_light_1"
	android:padding="@dimen/item_margin_normal"
	tools:context=".screen.shop.ShopFragment">

	<TextView
		android:id="@+id/gem"
		style="@style/TitleBigMedium"
		android:drawableEnd="@drawable/ic_gem"
		android:drawablePadding="@dimen/item_padding_small"
		android:gravity="end"
		tools:text="2" />

	<android.support.v7.widget.RecyclerView
		android:id="@+id/avatarList"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/gem"
		android:layout_marginTop="@dimen/item_margin_normal"
		android:orientation="vertical" />
</RelativeLayout>