...
					android:id="@+id/buttonContainer"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentEnd="true">

					<Button
						android:id="@+id/btnBuy"
						style="@style/ButtonTheme"
						android:drawableEnd="@drawable/ic_gem_small"
						android:gravity="center"
						android:visibility="visible"
						tools:text="Buy for 3" />

...
