...
	<string name="press_to_start_shadowing">Press and hold to start shadowing</string>
	<string name="release_to_stop_shadowing">Release to stop shadowing</string>
	<string name="home">Home</string>
	<string name="play">Play</string>
	<string name="learn">Learn</string>
	<string name="achievements">Achievements</string>
	<string name="shop">Shop</string>
	<string name="leaderbaoard">Leaderboard</string>
	<string name="choose_word">Choose Word</string>
	<string name="your_progress">Your Progress</string>
	<string name="your_progress_desc">You have finished %1$s%% of all learning materials</string>
	<string name="active">Active</string>
	<string name="set_active">Set Active</string>
...
